[package]
name = "slb"
version = "0.3.1"
authors = ["Vladimir Feinberg <vladimir.feinberg@gmail.com>"]
edition = "2018"
description = "Sharded load balancing text-streaming Unix tool"
homepage = "https://github.com/vlad17/slb"
repository = "https://github.com/vlad17/slb"
readme = "../README.md"
keywords = ["stream", "text", "parallel", "cli"]
categories = ["command-line-utilities", "concurrency"]
license = "Apache-2.0"

[dependencies]
memchr = "2.3"
structopt = "0.3"
num_cpus = "1.13"
bstr = "0.2"

